@@ -2258,10 +2258,30 @@
       <cost>61000</cost>
       <forcegrade>None</forcegrade>
       <bonus>
-        <specificattribute>
+		<composure>1</composure>
+		<judgeintentionsdefense>1</judgeintentionsdefense>
+		<drainresist>1</drainresist>
+		<fadingresist>1</fadingresist>
+		<directmanaspellresist>1</directmanaspellresist>
+		<detectionspellresist>1</detectionspellresist>
+		<manaillusionresist>1</manaillusionresist>
+		<mentalmanipulationresist>1</mentalmanipulationresist>
+		<decreasebodresist>1</decreasebodresist>
+		<decreaseagiresist>1</decreaseagiresist>
+		<decreaserearesist>1</decreaserearesist>
+		<decreasestrresist>1</decreasestrresist>
+		<decreasecharesist>1</decreasecharesist>
+		<decreaseintresist>1</decreaseintresist>
+		<decreaselogresist>1</decreaselogresist>
+		<decreasewilresist>1</decreasewilresist>
+		<skillattribute>
           <name>WIL</name>
-          <val>1</val>
-        </specificattribute>
+          <bonus>1</bonus>
+        </skillattribute>
+		<physiologicaladdictionfirsttime>1</physiologicaladdictionfirsttime>
+        <psychologicaladdictionfirsttime>1</psychologicaladdictionfirsttime>
+        <physiologicaladdictionalreadyaddicted>1</physiologicaladdictionalreadyaddicted>
+        <psychologicaladdictionalreadyaddicted>1</psychologicaladdictionalreadyaddicted>
         <addqualities>
           <addquality>Poor Self Control (Thrill Seeker)</addquality>
         </addqualities>
