@@ -45,6 +45,7 @@ Application Fixes:
 - Spells with no descriptors will no longer display a label saying that the descriptor text is not found in the spell selection screen.
 - Fixed an issue with detecting special modifications on weapons loaded onto vehicle weapon mounts when checking whether or not the limit on special modifications has been reached.
 - Fixed incorrect usage of SkillGroup name instead of the DisplayName. Closes #3785
+- Added support for improvements that add to the dicepools of resisting direct mana combat spells, direct physical combat spells, decrease BOD, decrease AGI, decrease REA, decrease STR, decrease CHA, decrease INT, decrease LOG, and decrease WIL.
 
 Data Changes:
 
@@ -79,6 +80,7 @@ This affects:
     FN MAG-5
     Stoner-Ares M202
     Ultamax MMG
+- Fixed Dareadrenaline adding 1 to WIL instead of 1 to dicepools based on WIL (important due to augmented attribute limits). Closes #3791.
 
 New Strings:
 
